--- a/product-dev.yml
+++ b/product-dev.yml
@@ -27,5 +27,5 @@ logging:
     root: info
     org.springframework.web.servlet.DispatcherServlet: debug
     org.springframework.cloud.sleuth: debug
-name: itcast-dev
+name: itcast-dev-11
 
